--- a/package.json
+++ b/package.json
@@ -20,7 +20,6 @@
   },
   "homepage": "https://github.com/vidahaha/wasteland#readme",
   "devDependencies": {
-    "eslint": "^4.11.0",
-    "eslint-plugin-react": "^7.5.1"
+    "eslint": "^4.11.0"
   }
 }
